# genre-copy

./: .env.example  .gitignore  MomentsGenerator.spec  README.md  build.bat  pyproject.toml  run.py
prompts/: 上新通知.txt  上新预告.txt  买家秀.txt  催单朋友圈.txt  好评推荐.txt  拉群+运营活跃.txt  牛肉+食物+其他.txt
src/: __init__.py  app.py  billing.py  config.py  exporter.py  generator.py  prompts.py
