[project]
name = "moments-generator"
version = "0.1.0"
description = "产品图文案生成器 - 基于火山引擎API的朋友圈文案生成工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "volcengine-python-sdk[ark]>=5.0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
moments-generator = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
